[project]
name = "autoaudit-api"
description = "AutoAudit Core API"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
    "redis>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "fakeredis>=2.31.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-redis>=3.1.3",
]
